--- a/styles.css
+++ b/styles.css
@@ -7,8 +7,8 @@ html, body {
 
 .logo-bar {
     position: fixed;
-    top: 1vh;
-    left: 0;
+    top: 1px;
+    left: 1px;
     width: 90vw;
     height: 2vh;
     display: flex;
