--- a/styles.css
+++ b/styles.css
@@ -22,24 +22,19 @@ html, body {
     margin-top: 4vh;
 }
 
-.clear-all-button {
-    font-size: 14px;
-    cursor: pointer;
-    background-color: #000000;
-    color: white;
-    border: none;
-    padding: 8px;
+.logo-container {
     position: fixed;
-    top: 10px;
-    left: 340px;
-    z-index: 200;
-    transition: left 0.3s ease;
-    height: 35px;
-    border-radius: 24px;
-}
+    top: -5px;
+    right: 5px;
+  }
+  
+  .logo {
+    width: 155px;
+    height: 80px;
+  }
 
 #resources-button {
-    font-size: 14px;
+    font-size: 15px;
     cursor: pointer;
     background-color: #000000;
     color: white;
@@ -47,18 +42,54 @@ html, body {
     padding: 0 10px;
     position: fixed;
     top: 10px;
-    left: 225px;
+    left: 15px;
     z-index: 400;
     transition: left 0.3s ease;
-    height: 35px;
+    height: 37px;
     border-radius: 24px;
     line-height: 35px;
+    width: 114px;
 }
 
 #resources-button img {
     margin-right: 8px;
     width: 12px;
     vertical-align: middle;
+}
+
+.clear-all-button {
+    font-size: 15px;
+    cursor: pointer;
+    background-color: #000000;
+    color: white;
+    border: none;
+    padding: 8px;
+    position: fixed;
+    top: 10px;
+    left: 135px;
+    z-index: 200;
+    transition: left 0.3s ease;
+    height: 37px;
+    border-radius: 24px;
+    width: 95px;
+}
+
+.login-button {
+    font-size: 15px;
+    cursor: pointer;
+    background-color: #000000;
+    color: white;
+    border: none;
+    padding: 8px;
+    position: fixed;
+    top: 10px;
+    left: 240px;
+    z-index: 200;
+    transition: left 0.3s ease;
+    height: 37px;
+    border-radius: 24px;
+    width: 70px;
+
 }
 
 #info-button {
@@ -84,7 +115,6 @@ html, body {
     vertical-align: middle;
 }
 
-
 .custom-dropdown {
     display: block;
     position: relative;
@@ -102,6 +132,9 @@ margin: 0.25em;
 color: black;
 }
 
+h2 {
+    font-size: 20px;
+}
 
 head {
     text-align: left;
@@ -175,24 +208,23 @@ footer p {
 .info-box {
     display: none;
     position: fixed;
-    left: 10px;
     bottom: -200px;
-    right: 0;
-    width: 300px;
-    background-color: #5865F2;
+    width: 26%;
+    left: 5px;
+    background-color: #000;
     color: white;
-    padding-top: 15px;
+    padding-top: 10px;
     font-size: 16px;
-    border-radius: 10px;
+    border-radius: 14px;
     z-index: 1000;
     text-align: center;
     transition: bottom 0.3s ease;
 }
 
 .info-box.active {
-    bottom: 45px;
+    bottom: 5px;
     display: block;
-    animation: fadeInOut 4s forwards;
+    animation: fadeInOut 5s forwards;
 }
 
 
@@ -214,10 +246,10 @@ footer p {
 
 .close-button {
     position: absolute;
-    top: 10px;
-    right: 10px;
+    top: 15px;
+    right: 15px;
     cursor: pointer;
-    font-size: 20px;
+    font-size: 18px;
     color: #fff;
     z-index: 1001;
     transition: color 0.5s ease;
@@ -303,18 +335,6 @@ footer p {
 .sidebar.open #clear-all-button {
     left: calc(200px + 90px);
 }
-
-.home-button {
-    padding: 5px 10px;
-    background-color: #333;
-    color: white;
-    margin-left: 8px;
-    padding: 6px;
-    cursor: pointer;
-    border-radius: 8px;
-    display: inline-block;
-    z-index: 400000;
-  }
 
 .custom-dropdown .dropdown-options {
     display: none;
@@ -664,7 +684,7 @@ footer p {
       }
   
   .leaflet-top .leaflet-control {
-      margin-top: 10px;
+      margin-top: 125px;
       }
   
   .leaflet-bottom .leaflet-control {
@@ -703,9 +723,9 @@ footer p {
   }
   
   .leaflet-zoom-anim .leaflet-zoom-animated {
-      -webkit-transition: -webkit-transform 0.25s cubic-bezier(0,0,0.25,1);
-         -moz-transition:    -moz-transform 0.25s cubic-bezier(0,0,0.25,1);
-              transition:         transform 0.25s cubic-bezier(0,0,0.25,1);
+      -webkit-transition: -webkit-transform 0.1s cubic-bezier(0,0,0.25,1);
+         -moz-transition:    -moz-transform 0.1s cubic-bezier(0,0,0.25,1);
+              transition:         transform 0.1s cubic-bezier(0,0,0.25,1);
       }
   
   .leaflet-zoom-anim .leaflet-tile,
