--- a/styles.css
+++ b/styles.css
@@ -14,7 +14,7 @@ html, body {
     display: flex;
     align-items: center;
     background-color: transparent;
-    color: #000000;
+    color: #e0e0e0;
     padding: 2vh;
     text-transform: none;
     z-index: 600;
@@ -36,8 +36,8 @@ html, body {
 #resources-button {
     font-size: 15px;
     cursor: pointer;
-    background-color: #000000;
-    color: white;
+    background-color: rgba(41, 41, 41, 0.625);
+    color: rgb(253, 253, 253);
     border: none;
     padding: 0 10px;
     position: fixed;
@@ -48,7 +48,8 @@ html, body {
     height: 37px;
     border-radius: 24px;
     line-height: 35px;
-    width: 114px;
+    width: 125px;
+    font-weight: bold;
 }
 
 #resources-button img {
@@ -57,24 +58,25 @@ html, body {
     vertical-align: middle;
 }
 
-.clear-all-button {
+.clear-resources-button {
     font-size: 15px;
     cursor: pointer;
-    background-color: #000000;
-    color: white;
+    background-color: rgba(41, 41, 41, 0.625);
+    color: rgb(253, 253, 253);
     border: none;
     padding: 8px;
     position: fixed;
     top: 10px;
-    left: 225px;
+    left: 235px;
     z-index: 200;
     transition: left 0.3s ease;
     height: 37px;
     border-radius: 24px;
-    width: 95px;
+    width: 160px;
+    font-weight: bold;
 }
 
-.clear-all-button img {
+.clear-resources-button img {
     margin-right: 8px;
     width: 12px;
     vertical-align: middle;
@@ -83,8 +85,8 @@ html, body {
 .login-button {
     font-size: 15px;
     cursor: pointer;
-    background-color: #000000;
-    color: white;
+    background-color: rgba(41, 41, 41, 0.625);
+    color: rgb(253, 253, 253);
     border: none;
     padding: 8px;
     position: fixed;
@@ -95,7 +97,7 @@ html, body {
     height: 37px;
     border-radius: 24px;
     width: 90px;
-
+    font-weight: bold;
 }
 
 #login-button img {
@@ -104,11 +106,36 @@ html, body {
     vertical-align: middle;
 }
 
-#info-button {
-    font-size: 14px;
+#load-markers-button {
+    font-size: 15px;
     cursor: pointer;
-    background-color: #000000;
-    color: white;
+    background-color: rgba(41, 41, 41, 0.625);
+    color: rgb(253, 253, 253);
+    border: none;
+    padding: 0 10px;
+    position: fixed;
+    top: 10px;
+    left: 400px;
+    z-index: 400;
+    transition: left 0.3s ease;
+    height: 37px;
+    border-radius: 24px;
+    line-height: 35px;
+    width: 200x;
+    font-weight: bold;
+}
+
+#load-markers-button img {
+    margin-right: 2px;
+    width: 20px;
+    vertical-align: middle;
+}
+
+#info-button {
+    font-size: 15px;
+    cursor: pointer;
+    background-color: rgba(41, 41, 41, 0.625);
+    color: rgb(253, 253, 253);
     border: none;
     padding: 0 10px;
     position: fixed;
@@ -125,6 +152,14 @@ html, body {
     margin-right: 8px;
     width: 12px;
     vertical-align: middle;
+}
+
+#resources-button:hover,
+.clear-resources-button:hover,
+#load-markers-button:hover,
+.login-button:hover {
+    background-color: #000000;
+    color: white;
 }
 
 .info-box {
@@ -148,7 +183,6 @@ html, body {
     display: block;
     animation: fadeInOut 5s forwards;
 }
-
 
 .custom-dropdown {
     display: block;
@@ -190,6 +224,7 @@ footer p {
     font-size: 10px;
     color: #fff;
 }
+
 .map-container {
     height: 100%;
     width: 100%;
@@ -240,7 +275,6 @@ footer p {
     cursor: pointer;
 }
 
-
 @keyframes fadeInOut {
     0% {
         opacity: 0;
@@ -256,7 +290,6 @@ footer p {
     }
 }
 
-
 .close-button {
     position: absolute;
     top: 15px;
@@ -271,7 +304,6 @@ footer p {
 .close-button:hover {
     color: #ccc; 
 }
-
 
 #mouse-coordinates {
     position: absolute;
@@ -342,17 +374,18 @@ footer p {
 .custom-dropdown:hover .dropdown-options {
     display: block;
 }
+
 .sidebar.open #resources-button {
     left: calc(200px + 10px);
 }
-.sidebar.open #clear-all-button {
+
+.sidebar.open #clear-resources-button {
     left: calc(200px + 90px);
 }
 
 .custom-dropdown .dropdown-options {
     display: none;
 }
-
 
 :root {
     --color-primary: #ffb10f;
@@ -367,7 +400,6 @@ footer p {
     --color-alert: #b61313;
     --border-radius: 0.5em;
 }
-
 
   .leaflet-control-container > .leaflet-left {
     left: 50%;
